<?xml version="1.0" encoding="UTF-8"?>
<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.jinhe.tss</groupId>
    <artifactId>tss</artifactId>
    <packaging>pom</packaging>
    <name>TSS</name>
    <version>3.3</version>
 
	<organization>
		<name>Jin He</name>
		<url>http://www.llrtss.com</url>
	</organization>
	<url>index.html</url>

	<developers>
		<developer>
			<id>Jon.King</id>
			<name>Jon.King</name>
			<email>jinpujun@gmail.com</email>
			<url>http://www.llrtss.com</url>
			<organization>Jin He</organization>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-6</timezone>
		</developer>
	</developers>
    
   	<properties>
		<tss.version>3.3</tss.version>
		<spring.version>3.2.0.RELEASE</spring.version>
		<hibernate.version>3.5.1-Final</hibernate.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>  
		<jdk.version>1.6</jdk.version>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.jinhe.tss</groupId>
				<artifactId>cache</artifactId>
				<version>${tss.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jinhe.tss</groupId>
				<artifactId>framework</artifactId>
				<version>${tss.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jinhe.tss</groupId>
				<artifactId>um</artifactId>
				<version>${tss.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jinhe.tss</groupId>
				<artifactId>cms</artifactId>
				<version>${tss.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jinhe.tss</groupId>
				<artifactId>portal</artifactId>
				<version>${tss.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jinhe.tss</groupId>
				<artifactId>dm</artifactId>
				<version>${tss.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

    <dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
		    <version>3.0.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- TEST dependency -->
        <dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.3</version>
			<scope>test</scope>
		</dependency>
		
		<!-- Used to fix "java.lang.NoSuchFieldError: fFeatures" error when running test. -->
		<dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.7.1</version>
            <scope>test</scope>
        </dependency>
		
    </dependencies>
    
    <build>
        <defaultGoal>install</defaultGoal>
        <finalName>${artifactId}</finalName>

		<pluginManagement>
			<plugins>
				<!-- checkstyle??findbugs -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>2.9.1</version> 
					<configuration>
						<!-- 
						<configLocation>config/maven_checks.xml</configLocation>
						<configLocation>tss_checks.xml</configLocation>
						 -->
					</configuration>
				</plugin> 
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>2.5.2</version> 
				</plugin> 

				<!-- test report -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>2.12</version>
				</plugin>
				<!-- test coverage -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
					<version>2.5.2</version>
					<executions>
                        <execution>
                            <phase>site</phase>
                            <goals>
                                <goal>cobertura</goal>
                            </goals>
                        </execution>
                    </executions>
				</plugin>

				<!-- java doc -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9.1</version>
					<configuration>
						<aggregate>true</aggregate>
						<charset>UTF-8</charset>
						<encoding>UTF-8</encoding>
						<docencoding>UTF-8</docencoding>
					</configuration>
				</plugin>  
			</plugins>
		</pluginManagement>

        <plugins>
            <plugin>
				<groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-compiler-plugin</artifactId>  
				<version>3.1</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>	 
			
			<plugin>
               <groupId>org.apache.maven.plugins</groupId>
			   <artifactId>maven-eclipse-plugin</artifactId>
			   <version>2.9</version>
               <configuration>
					<projectNameTemplate>[artifactId]</projectNameTemplate>
                    <useProjectReferences>true</useProjectReferences>
               </configuration>
            </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<locales>EN</locales> <!-- ZH_CN -->
				</configuration>
			</plugin>

			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<skip>false</skip>
					<includes> 
						<include>**/*Test.java </include> 
					</includes>
					<testFailureIgnore>true</testFailureIgnore> 
					<argLine>
						-Xms256m -Xmx1024m -XX:MaxPermSize=256M
					</argLine>
                </configuration>
            </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
			</plugin>

			<plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
            </plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>dashboard-maven-plugin</artifactId>
				<version>1.0.0-beta-1</version>
			</plugin>	

			<plugin>
	            <groupId>com.atlassian.maven.plugins</groupId>
	            <artifactId>maven-clover2-plugin</artifactId>
	            <version>3.0.5</version>
	            <configuration>
		          <licenseLocation>D:/project/clover.license</licenseLocation>
		          <generateHtml>true</generateHtml>
		          <generateXml>true</generateXml>
		        </configuration>
	        </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
			</plugin>

			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<phase>process-resources</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<echo>
									process log4j.properties: set
									log4j.logger.com.jinhe to ${log.level};
								</echo>
								<replaceregexp file="${basedir}/target/classes/log4j.properties"
									match="log4j\.logger\.com\.jinhe=debug"
									replace="log4j\.logger\.com\.jinhe=${log.level}" byline="true" />

								<echo>
									process application.properties: set job.enable to ${job.enable};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="job.enable = true" replace="job.enable = ${job.enable}" byline="true" />

								<echo>
									process application.properties: set last.package.time to
									${maven.build.timestamp};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="last\.package\.time = yyyy-MM-dd hh:mi:ss"
									replace="last\.package\.time = ${maven.build.timestamp}" byline="true" />

								<echo>
									process application.properties:  set db.connection.username to ${db.username}, 
									db.connection.password to ${db.password}, db.connection.url to ${db.url};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="username root" replace="username ${db.username}" byline="true" />
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="800best@com" replace="${db.password}" byline="true" />	
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="localhost:3306\/tss" replace="${db.url}" byline="true" />

								<echo>
									process application.properties: set environment to ${environment};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/application.properties" 
									match="environment = dev"
									replace="environment = ${environment}" byline="true" />
								
								<echo>
									process appServers.xml: set tomcat.url to ${tomcat.url};
								</echo>
								<replaceregexp
									file="${basedir}/target/classes/tss/appServers.xml" 
									match="localhost:8088" replace="${tomcat.url}" byline="true" />
							</tasks>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>ant</groupId>
						<artifactId>ant-nodeps</artifactId>
						<version>1.6.5</version>
					</dependency>
					<dependency>
						<groupId>ant</groupId>
						<artifactId>ant-apache-regexp</artifactId>
						<version>1.6.5</version>
					</dependency>
				</dependencies>
			</plugin>
 
        </plugins>
    </build>

	<profiles>
		<!-- eg: mvn clean install  -Pxxx -Dmaven.test.skip=true -->
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<environment>dev</environment>
				<log.level>debug</log.level>
				<job.enable>true</job.enable>
				<db.username>root</db.username>
				<db.password>800best@com</db.password>
				<db.url>127.0.0.1:3306/tss</db.url>
				<tomcat.url>localhost:8088</tomcat.url>
			</properties>
		</profile>
		
		<profile>
			<id>demo</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<environment>demo</environment>
				<log.level>info</log.level>
				<job.enable>true</job.enable>
				<db.username>root</db.username>
				<db.password>800best@com</db.password>
				<db.url>127.0.0.1:3306/demo_bi</db.url>
				<tomcat.url>10.8.72.80:8888</tomcat.url>
			</properties>
		</profile>

	</profiles>

	<distributionManagement>
		<site>
			<id>www.llrtss.com</id>      
			<url>file://</url>
		</site>
	</distributionManagement>

	<reporting>
		<plugins>			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>dashboard-maven-plugin</artifactId>
				<version>1.0.0-beta-1</version>
			</plugin>	
		</plugins>
	</reporting>

    <modules>
		<module>cache</module>
		<module>framework</module>
		<module>um</module>
		<module>cms</module>
		<module>portal</module>
		<module>dm</module>
		<module>webapp</module>
    </modules>

	<repositories>
		<repository>
			<id>Central</id>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>Codehaus Snapshots</id>
			<url>http://snapshots.repository.codehaus.org</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
        <repository>
            <id>com.springsource.repository.maven.release</id>  
			<url>http://maven.springframework.org/release/</url> 
        </repository>
		
    </repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>Codehaus repository</id>
			<url>http://repository.codehaus.org/</url>
		</pluginRepository>
	</pluginRepositories>

</project>